Batch update of statuses and scores after exercise